# Knowledge_Orchestrator

./: .gitignore  Agent_Knowledge_Orchestrator.md  Data_Contracts.md  README.md  System_Architecture.md  pyproject.toml  start_orchestrator.bat
docs/: Phase_2_Domain.md  Phase_3_Broker.md  Phase_4_Publication.md  Phase_5_Multitasking.md  Phase_6_Semantic_Maintenance.md  Phase_7_UI.md  Phase_8_Operations.md  Study_Multitasking_LLM.md
scripts/: build_windows.ps1
src/knowledge_orchestrator/: __init__.py  app.py  config.py  runtime.py
src/knowledge_orchestrator/domain/: __init__.py  broker_contracts.py  broker_models.py  contracts.py  errors.py  models.py  profiles.py  publication_models.py  semantic_models.py  sources.py  topics.py
src/knowledge_orchestrator/integrations/: __init__.py  broker_client.py
src/knowledge_orchestrator/migrations/: 001_initial.sql  002_domain_topics_profiles.sql  003_broker_workflows.sql  004_publication_review.sql  005_broker_contract_v2.sql  006_multitasking_policy.sql  (+2 more)
tests/: helpers.py  test_broker_client.py  test_broker_contracts.py  test_config.py  test_contracts.py  test_database.py  test_domain_enrichment.py  test_file_stability.py  test_filesystem.py  test_inbox_watcher.py  test_ingestion_recovery.py  test_model_discovery.py  test_multitasking_policy.py  test_phase_eight_operations.py  test_phase_four_publication.py  test_phase_seven_ui_snapshots.py  test_phase_six_semantic_maintenance.py  test_phase_three_workflows.py  test_profiles.py  test_topics.py  test_worker_ui_boundary.py
tests/fixtures/: broker_v2_single_request.json
(+34 files in other folders)
