[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-orchestrator"
version = "0.1.0"
description = "Ingesta durable y orquestación local de conocimiento"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0,<7",
    "watchdog>=4.0,<7",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.6,<1",
    "mypy>=1.10,<2",
]

[project.scripts]
knowledge-orchestrator = "knowledge_orchestrator.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
knowledge_orchestrator = ["migrations/*.sql"]

[tool.ruff]
line-length = 110
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
